# src/cskh/dto/reply-ig-comment.dto.ts
@@ -1,0 +1,8 @@
+import { IsString, MaxLength, MinLength } from 'class-validator';
+
+export class ReplyIgCommentDto {
+  @IsString()
+  @MinLength(1)
+  @MaxLength(2200)
+  message!: string;
+}
